[gd_scene load_steps=13 format=2]

[ext_resource path="res://2x/Asset 81@2x.png" type="Texture" id=1]
[ext_resource path="res://Styles/EndScreen.tres" type="StyleBox" id=2]
[ext_resource path="res://GDScripts/LetterCatching.gd" type="Script" id=3]
[ext_resource path="res://1x/Asset 91.png" type="Texture" id=4]
[ext_resource path="res://2x/Asset 79@2x.png" type="Texture" id=5]
[ext_resource path="res://2x/Asset 80@2x.png" type="Texture" id=6]
[ext_resource path="res://2x/Asset 82@2x.png" type="Texture" id=7]
[ext_resource path="res://1x/Asset 86.png" type="Texture" id=8]
[ext_resource path="res://1x/Asset 83.png" type="Texture" id=9]
[ext_resource path="res://1x/Asset 90.png" type="Texture" id=10]
[ext_resource path="res://1x/Asset 93.png" type="Texture" id=11]
[ext_resource path="res://4x/Asset 5@4x.png" type="Texture" id=12]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 157.0
margin_right = 1200.0
margin_bottom = 478.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 70
alignment = 1

[node name="LetterCatching" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 243.0
margin_bottom = 321.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 7 )
script = ExtResource( 3 )

[node name="CardMatching" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 313.0
margin_right = 592.0
margin_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 139, 124 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
stretch_mode = 3

[node name="Fly" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 662.0
margin_right = 867.0
margin_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 139, 124 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
stretch_mode = 3

[node name="Runner" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 937.0
margin_right = 1107.0
margin_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 139, 124 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 11 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 482.0
margin_right = 1200.0
margin_bottom = 482.0

[node name="Button" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -151.0
margin_right = -33.0
margin_bottom = -23.0
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = -147.0
margin_right = 148.0
margin_bottom = -19.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 12 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/LetterCatching" to="Panel/VBoxContainer/HBoxContainer/LetterCatching" method="_on_LetterCatching_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/CardMatching" to="Panel/VBoxContainer/HBoxContainer/LetterCatching" method="_on_CardMatching_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Fly" to="Panel/VBoxContainer/HBoxContainer/LetterCatching" method="_on_Fly_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Runner" to="Panel/VBoxContainer/HBoxContainer/LetterCatching" method="_on_Runner_pressed"]
[connection signal="pressed" from="Panel/Button" to="Panel/VBoxContainer/HBoxContainer/LetterCatching" method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="Panel/VBoxContainer/HBoxContainer/LetterCatching" method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="Panel/VBoxContainer/HBoxContainer/LetterCatching" method="_on_Button2_pressed"]
